@@ -1,5 +1,10 @@
 ﻿RELEASE HISTORY
 
+16/12/2014 1.00 beta rev 447
+    - Small fix to ZWaveLib (issue #66)
+    - Updated Windows setup packager
+    - Updated French locale files
+
 15/12/2014 1.00 beta rev 446
     - Added Hard Reset option to Z-Wave interface settings (UI)
     - Added ZWaveLib Controller.SoftReset and Controller.HardReset functions
